--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 weights/DLNR_SceneFlow.pth
 /Dataset1/*
-/disengage_videos/frames
+/disengage_videos/frames*
 /disengage_videos/*.mp4
 /face_laser_projector/*
 
